--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,34 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Kai Jia
-  # email: jiakai@mit.edu
-description: >- # this means to ignore newlines until "baseurl:"
-  Personal website of Kai Jia at MIT
+title: Kai Jia  # title is your name
+description: My academic path
 baseurl: "" # the subpath of your site, e.g. /blog
 domain: jiakai.xyz
 url: "https://jiakai.xyz" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-github_username:  jia-kai
+email: jiakai@mit.edu
+copyright_begin: 2021
 
 # Build settings
-theme: minima
+# theme: minima
 plugins:
-  - jekyll-feed
   - jekyll-seo-tag
+
+avatar: assets/avatar.jpg
+position: PhD student
+affiliation: MIT CSAIL
+
+clicky: "101328564"
+disqus:
+  shortname: jiakai
+
+header_pages:
+  - url: "/#jump-about"
+    title: "About"
+  - url: "/#jump-publications"
+    title: "Publications"
+  - url: "/#jump-posts"
+    title: "Posts"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
