--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -120,9 +120,9 @@
       conf_url: "https://dl.acm.org/doi/10.1145/3450626.3459755"
       tldr: >
         Solve general nonlinear equations via higher-order approximation. This
-        paper also contains a short introduction of the very elegant and
+        paper also contains a short introduction to the very elegant and
         interesting but lesser-known Asymptotic Numerical Method. This work is
-        an extension of my course project at Advanced Computer Graphics.
+        an extension of my course project for Advanced Computer Graphics.
       abs: >
         <p>Solving nonlinear systems is an important problem. Numerical
         continuation methods efficiently solve certain nonlinear systems. The
