--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -6,6 +6,7 @@
         - Kai Jia
         - Martin Rinard
       conf: "28th Static Analysis Symposium (SAS 2021)"
+      conf_url: "https://conf.researchr.org/home/sas-2021#event-overview"
       tldr: >
         Complete verifiers (and many incomplete verifiers) for neural networks
         ignore floating point error. We show that this leads to wrong
@@ -49,6 +50,7 @@
         - Kai Jia
         - Martin Rinard
       conf: "28th Static Analysis Symposium (SAS 2021)"
+      conf_url: "https://conf.researchr.org/home/sas-2021#event-overview"
       tldr: >
         Enumerating input states in the discretized input space is more
         efficient and robust in verifying low-dimensional input neural networks
