--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,4 @@
-- cat: Computational Game Theory
+- cat: Algorithmic Game Theory
   pubs:
     - title: "On the Impact of Player Capability on Congestion Games"
       key: playercap
